maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: Boolean does not take parameters
     }else (!estFaceMur){
                        ^