maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
   def keepHandOnSideWall(){
     gauche()
     if (estFaceMur){
       droite()
       avance()
     }else (!estFaceMur){
       avance()
     }
   }
  keepHandOnSideWall
}